--- a/src/scss/components/pages/waiting.scss
+++ b/src/scss/components/pages/waiting.scss
@@ -1,23 +1,201 @@
 .page-template-waiting{
-     background-color: #818275;
-     width: 100vw;
-     height: 100vh;
-     text-align: center;
-
+          background-color: #818275;
+          width: 100vw;
+          height: 100vh;
+          margin: 0;
+          padding: 0;
+          text-align: center;
+     }
+     
      .container{
           display: flex;
           align-items: center;
           justify-content: center;
+          height: 100vh;
+          width: 100vw;
+
+          #logo{
+               margin: auto;
+          }
 
           h1{
                font-family: 'Hasteristico';
-               font-size: 2em;
+               font-size: 4.5em;
+               color:#fff;
+               letter-spacing: 3px;
+               margin-bottom: 0;
+               margin-top:40px;
+          }
+          
+          h2{
+               font-family: 'Autumn';
+               font-size: 4.5em;
+               color:#c4de58;
+               margin-top: 0;
+               margin-bottom: 40px;
+          }
+          
+          a{
+               font-family: 'Montserrat',sans-serif;
+               text-decoration: none;
+               color: #fff;
+               text-transform: uppercase;
+
+               &:hover{
+                    color:#c4de58;
+               }
+          }
+     
+     #contact{
+          display: flex;
+          justify-content: center;
+          gap:50px;
+
+          .white{
+               width: calc(50% - 50px);
+          }
+     }
+     
+     .cta{
+          background-color: #fff;
+          text-decoration: none;
+          padding: 15px 15px;
+          border-radius: 25px;
+          height: 20px;
+          font-size: .9em;
+          display: inline-block;
+          letter-spacing: 5px;
+          margin-right: 20px;
+     }
+     
+     .block_title{
+          border-top: 1px solid #6d6d6d;
+          border-bottom: 1px solid #6d6d6d;
+          margin-bottom: 40px;
+     }
+     
+     .gray{
+          background-color: #333334;
+          padding: 15px 50px;
+          margin:auto;
+          margin-right: 0;
+          overflow: hidden;
+
+          &::after{
+               position: relative;
+               content: 'Nous contacter';
+               color:#c4de58;
+               display: block;
+               padding:15px 0px;
+               width: calc(100% + 100px)!important;
+               background-color: white;
+               height: 100px;
+               left: -50px;
+               bottom: 30px;
+               transform:scaleY(0);
+               transform-origin: bottom;
+               transition: all ease-in 300ms;
           }
 
-          #contact{
-               display: flex;
-               
+          &:hover::after{
+               transform: scaleY(1);
           }
-     }    
-}
-
+     }
+     
+     .cta img{
+          height: 10px;
+          aspect-ratio: 1;
+     }
+     
+     .bg-white img{
+          height:12px;
+     }
+     
+     .flex{
+          display: flex;
+          align-items: center;
+     }
+     
+     .flex:hover img,
+     .flex:hover{
+          color:#c4de58;
+     }
+     
+     .flex:hover a{
+          background-color: inherit;
+          transition: all 0.6s;
+     }
+     
+     /* Hover */
+     
+     .section-contact .flex::before{
+          width: 50px;
+          height:50px;
+          background-color:rgb(255, 255, 255);
+          content:"";
+          border-radius: 25px;
+          z-index: -1;
+          text-align: center;
+          position: absolute;
+          margin-left: 30px;
+          transition: all ease-in-out .2s;
+     }
+     
+          .flex:hover::before{
+               width: 300px;
+               transition: all ease-in-out .2s;
+          }
+     
+          .flex:hover img{
+               transform: rotate(360deg);
+               transition: transform ease-in-out .4s;
+          }
+     }
+     
+     @media (max-width: 1040px) {
+          .container{
+               width: 90vw;
+               margin: auto;
+               height: 100vh;
+          }
+          
+          .container #logo{
+               width:70%;
+               margin-bottom: 40px;
+          }
+               .container h1,
+               .container h2{
+                    font-size: 2em;
+               }
+          
+               #contact {
+                    display: flex;
+                    justify-content: center;
+                    gap: 30px;
+                    flex-direction: column;
+                    align-items: center;
+               }
+          
+               .container p{
+                    font-size: 1em;
+               }
+          
+               .section-contact .flex::before{
+                    margin-left: 0px;
+               }
+          
+               .section-contact span{
+                    margin-left: 20px;
+               }
+     
+               .gray{
+                    letter-spacing: 3px;
+                    line-height:1.8em;
+                    font-size: .7em;
+                    padding:15px 40px;
+               }
+     
+               .gray:hover::after{
+                    bottom: 35px;
+               }
+          }
