--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,5 +2,5 @@
   "components/footer.scss", "components/sections/section-presentation.scss", "components/sections/section-citation.scss", "components/sections/section-suiveznous.scss",
   "components/sections/section-contact.scss", "components/sections/section-cta-contact.scss", "components/sections/section-pointsforts.scss",
   "components/pages/front-page.scss", "components/pages/waiting.scss", "components/pages/contact.scss", "components/pages/simple-page.scss", "components/pages/actualites.scss",
-  "components/pages/a-propos.scss", "components/pages/informations.scss", "components/pages/single-estate.scss" ,"components/pages/documentation.scss", "components/pages/single.scss",
+  "components/pages/a-propos.scss", "components/pages/informations.scss", "components/pages/listing-estates.scss", "components/pages/single-estate.scss" ,"components/pages/documentation.scss", "components/pages/single.scss",
   "components/responsive.scss";
