--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -121,6 +121,55 @@
           }
      }
 
+     #slider-bottom{
+          margin-bottom: 100px;
+
+          .container{
+               position: relative;
+
+               .swiper-wrapper {
+
+                    .swiper-slide{
+                         a{
+                              max-height: 300px;
+                              height: 250px;
+                              overflow: hidden;
+                              display: block;
+     
+                              img{
+                                   object-fit: cover;
+                                   height: 100%;
+                                   width: 100%;
+                              }
+                         }
+                    }
+               }
+     
+               .swiper-button-next,
+               .swiper-button-prev{
+                    position: absolute;
+                    top: 50%;
+                    left: -50px;
+                    right: auto;
+                    background-color: $light-gray;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 20px;
+     
+                    &::after{
+                         font-size: 0.8rem;
+                         color: $middle-gray
+                    }
+               }
+     
+               .swiper-button-next{
+                    right: -50px;
+                    left: auto;
+               }
+          }
+          
+     }
+
      #contact-banner{
           background: $dark-gray;
           padding: 80px 0;
