--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -96,6 +96,10 @@ a {
     border-radius: 30px;
   }
 
+  &::after{
+    content:'';
+  }
+
   &:hover {
     &::before {
       transform: scaleX(1);
@@ -109,8 +113,8 @@ a {
   border: 1px solid $primary-color;
   border-radius: 30px;
   color: $dark-gray;
-  font-size: 0.8rem;
-  padding: 10px 30px;
+  font-size: 1rem;
+  padding: 12px 40px;
   text-decoration: none;
   letter-spacing: 5px;
   text-transform: uppercase;
@@ -138,6 +142,11 @@ a {
     color: #fff;
     left: 0;
     border-radius: 30px;
+  }
+
+  &::after{
+    content:'';
+    
   }
 
   &:hover {
@@ -173,6 +182,11 @@ a {
     transition: transform ease-in-out 300ms;
     z-index: -1;
     border-radius: 30px;
+  }
+
+  &::after{
+    content:'';
+
   }
 
   &:hover {
