--- a/src/scss/components/pages/a-propos.scss
+++ b/src/scss/components/pages/a-propos.scss
@@ -138,7 +138,8 @@
                 overflow: hidden;
                 img{
                   height: 100%;
-                  width: auto !important;
+                  width: 100%;
+                  object-fit: cover;
                   max-width: inherit;
                 }
             }
