--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -77,6 +77,7 @@
           color: $primary-color;
           opacity: 1;
           background: $primary-color;
+          transition: width ease-in 300ms;
         }
         .swiper-pagination-bullet-active {
           color:#fff;
