--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -146,6 +146,272 @@
   #section_nosbiens {
     padding-top: 350px;
     background: #fff;
+
+    .whise-filter-container {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      gap: 1rem;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      margin-bottom: 100px;
+ 
+      .input-text,
+      .input-select {
+           width: 15%;
+           height: 40px;
+           margin: 0.5rem auto;
+           display: -webkit-box;
+           display: -ms-flexbox;
+           display: flex;
+           -webkit-box-align: center;
+           -ms-flex-align: center;
+           align-items: center;
+           position: relative;
+           cursor: pointer;
+           
+           .select-custom {
+                width: 100%;
+                height: 100%;
+
+                .select2-selection--multiple {
+                     background-color: white;
+                     border: 1px solid #eeeef0 !important;
+                     border-radius: 20px !important;
+                     min-height: 40px !important;
+                     max-height: 40px !important;
+                     line-height: 25px;
+                     overflow: scroll;
+
+                     &::-webkit-input-placeholder,
+                      &::-moz-placeholder,
+                      &:-ms-input-placeholder,
+                      &::-ms-input-placeholder,
+                      &::placeholder{
+                            font-family: 'Sofia-pro',sans-serif;
+                            text-transform: uppercase;
+                            letter-spacing: 3px;
+                            font-size: .8rem;
+                            color: #000000;
+                      }
+
+                      option{
+                        font-family: 'Sofia-pro',sans-serif;
+                        text-transform: uppercase;
+                        letter-spacing: 3px;
+                        font-size: .8rem;
+                        color: #000000;
+                      }
+                 }
+           }
+           
+           .select-custom-lib {
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                justify-content: space-between;
+                width: 100%;
+                height: 100%;
+                padding: 0 1rem;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                background-color: white;
+                border: 1px solid #eeeef0;
+                border-radius: 20px;
+                -webkit-box-align: center;
+                -ms-flex-align: center;
+                align-items: center;
+                text-wrap: nowrap;
+                overflow: hidden;
+           }
+           
+           .select-custom-container{
+                position: absolute;
+                width: calc(100% - 2px);
+                top: calc(100% - 1px);
+                border: 1px solid #eeeef0;
+                border-top: 0px;
+                background-color: white;
+                display: none;
+                max-height: 30vh;
+                overflow-y: scroll;
+           
+                .auto-focus{
+                     background: none;
+                     border: 0;
+                     font-size: 1rem;
+                     width: 100%; 
+                }
+           
+                label.hide{
+                     display: none;
+                }
+           
+                label {
+                     -webkit-box-sizing: border-box;
+                     box-sizing: border-box;
+                     display: block;
+                     width: 100%;
+                     padding: 0.5rem 1rem;
+                     border-top: 1px solid #eeeef0;
+                     display: -webkit-box;
+                     display: -ms-flexbox;
+                     display: flex;
+                     -webkit-box-pack: justify;
+                     -ms-flex-pack: justify;
+                     justify-content: space-between;
+                     cursor: pointer;
+           
+                     input[type="checkbox"],
+                     input[type="radio"] {
+                          display: none;
+                     }
+                     
+                     .input-controller{
+                          display: inline-block;
+                          width: 18px;
+                          height: 18px;
+                          border: 1px solid #2777b6;
+                          border-radius: 3px;
+                          text-align: center;
+                          margin-right: 0.5rem;
+                          color: white;
+                          -webkit-transition: 300ms ease-in-out background-color;
+                          transition: 300ms ease-in-out background-color;
+                     }
+           
+                     .title {
+                          width: calc(100% - 23px);
+                     }
+           
+                     input:checked + .input-controller{
+                          background-color: #2777b6;
+                     }
+                }
+           }
+           
+           .buttons-container {
+                text-align: center;
+                margin-top: 1rem;
+           }
+           
+           .select-custom-container.open {
+                display: block;
+                z-index: 5;
+           }
+      }
+ 
+      input{
+           display: block;
+           width: 100%;
+           height: 100%;
+           padding: 0 1rem;
+           background-color: white;
+           border: 1px solid #eeeef0;
+           border-radius: 20px;
+           -webkit-box-sizing: border-box;
+           box-sizing: border-box;
+           font-family: 'Sofia-pro',sans-serif;
+           text-transform: uppercase;
+           letter-spacing: 3px;
+           font-size: .8rem;
+ 
+           &::-webkit-input-placeholder,
+           &::-moz-placeholder,
+           &:-ms-input-placeholder,
+           &::-ms-input-placeholder,
+           &::placeholder{
+                font-family: 'Sofia-pro',sans-serif;
+                text-transform: uppercase;
+                letter-spacing: 3px;
+                font-size: .8rem;
+                color: #000000;
+           }
+      }
+
+      .input-custom{
+           width: 100%;
+           height: 100%;
+      }
+
+      .select-custom-lib{
+           display: -webkit-box;
+           display: -ms-flexbox;
+           display: flex;
+           -webkit-box-pack: justify;
+           -ms-flex-pack: justify;
+           justify-content: space-between;
+           width: 100%;
+           height: 100%;
+           padding: 0 1rem;
+           -webkit-box-sizing: border-box;
+           box-sizing: border-box;
+           background-color: white;
+           border: 1px solid #eeeef0;
+           border-radius: 20px;
+           -webkit-box-align: center;
+           -ms-flex-align: center;
+           align-items: center;
+           text-wrap: nowrap;
+           overflow: hidden;
+           font-family: 'Sofia-pro',sans-serif;
+           text-transform: uppercase;
+           letter-spacing: 3px;
+           font-size: .8rem;
+      }
+
+      .select-custom-container{
+           position: absolute;
+           width: calc(100% - 2px);
+           top: calc(100% - 1px);
+           border: 1px solid #eeeef0;
+           border-top: 0px;
+           background-color: white;
+           display: none;
+           max-height: 30vh;
+           overflow-y: scroll;
+
+           label{
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                display: block;
+                width: 100%;
+                padding: 0.5rem 1rem;
+                border-top: 1px solid #eeeef0;
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                justify-content: space-between;
+                cursor: pointer;
+                     
+                .auto-focus{
+                     background: none;
+                     border: 0;
+                     font-size: 1rem;
+                     width: 100%;
+                }
+           }
+      }
+
+      .cta{
+           border:none;
+           background-color: $secondary-color;
+           font-family: 'Sofia-pro',sans-serif;
+           text-transform: uppercase;
+           letter-spacing: 3px;
+           font-size: .8rem;
+      }
+    }
   }
 
   #mot_president {
