--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -318,12 +318,13 @@ form {
 
 .cta-estimation{
   position: fixed;
-  right: -100px;
-  left: auto;
-  top: 50%;
-  z-index: 100;
-  transform: rotateZ(270deg);
-  border-radius: 20px 20px 0px 0;
-  font-size: .8rem;
-  margin: 0;
+    right: -120px;
+    left: auto;
+    top: 50%;
+    z-index: 100;
+    transform: rotateZ(270deg);
+    border-radius: 50px 60px 0px 0;
+    font-size: .7rem;
+    margin: 0;
+    font-weight: 500;
 }
