--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -385,20 +385,33 @@
                     }
                }
 
-               #section-cta-contact{
-                    .bloc_img{
-                         top:350px;
+               
+          }
+     }
+
+     #section-cta-contact{
+          .container{
+               .bloc_img{
+                    top:350px;
+                    width: 500px;
+                    height: 650px;
+
+                    img{
+                         -o-object-fit: cover;
+                         object-fit: cover;
+                         width: 100%;
+                         height: 100%;
                     }
+               }
 
-                    .content_section-cta{
-                         background: $dark-gray;
+               .content_section-cta{
+                    background: $dark-gray;
 
-                         .cta{
-                              background: $secondary-color;
-                         }
+                    .cta{
+                         background: $secondary-color;
                     }
                }
           }
-     }       
+     }     
 }
 
