--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -384,12 +384,12 @@
                          margin: 0;
                     }
                }
-
-               
           }
      }
 
      #section-cta-contact{
+          padding-bottom: 400px;
+
           .container{
                .bloc_img{
                     top:350px;
@@ -412,6 +412,6 @@
                     }
                }
           }
-     }     
+     } 
 }
 
