--- a/src/scss/components/pages/contact.scss
+++ b/src/scss/components/pages/contact.scss
@@ -11,7 +11,13 @@
           color: $light;
           font-size: 3rem;
           line-height: 3.5rem;
-          font-weight: 300;
+          color: $primary-color;
+          font-weight: 200;
+    
+          strong {
+            font-weight: 700;
+            color:$secondary-color;
+          }
         }
       }
 
