--- a/src/scss/components/pages/contact.scss
+++ b/src/scss/components/pages/contact.scss
@@ -1,6 +1,5 @@
 .page-template-contact {
-  #contact-content {
-    background-color: transparent !important;
+  #contact {
     padding-top: 400px;
 
     .container {
