--- a/src/scss/components/pages/waiting.scss
+++ b/src/scss/components/pages/waiting.scss
@@ -1,4 +1,5 @@
-.page-template-waiting{
+.page-template-waiting,
+.page-id-6{
           background-color: #818275;
           width: 100vw;
           height: 100vh;
