--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -320,12 +320,16 @@ form {
     right: -120px;
     left: auto;
     top: 50%;
-    z-index: 100;
+    z-index: 14;
     transform: rotateZ(270deg);
     border-radius: 50px 60px 0px 0;
     font-size: .7rem;
     margin: 0;
     font-weight: 500;
+
+    &:hover{
+      border-radius: 50px 60px 0px 0;
+    }
 }
 
 #photo_separator{
