--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -36,7 +36,7 @@
         li + li::before {
           content: "•";
           color: $primary-color;
-          padding: 30px;
+          padding: 0px 20px;
         }
 
         li {
@@ -53,17 +53,6 @@
               color: $primary-color;
             }
           }
-
-          &:last-child::before {
-            content: "|";
-            padding: 5px;
-          }
-        }
-        .wpml-ls-current-language {
-          a {
-            color: $primary-color;
-            font-weight: 600;
-          }
         }
       }
     }
@@ -78,12 +67,14 @@
       justify-content: flex-end;
       align-items: flex-start;
       gap: 50px;
+      margin-top: 20px;
 
       li {
         text-transform: uppercase;
         letter-spacing: 3px;
         font-size: 1rem;
         position: relative;
+        margin-bottom:0;
 
         a {
           color: $light;
@@ -97,14 +88,13 @@
 
       .cta {
         border-radius: 30px;
+        margin-top: -10px;
 
         &::after {
           content: "→";
           height: 30px;
           color: $light;
         }
-
-        
       }
 
       &::before {
