--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -14,6 +14,7 @@
                     -webkit-box-align: center;
                     -ms-flex-align: center;
                     align-items: center;
+                    font-family: "sofia-pro", sans-serif;
                
                     .input-text,
                     .input-select {
@@ -244,6 +245,10 @@
                          letter-spacing: 3px;
                          font-size: .8rem;
                     }
+
+                    #sortBy{
+                         border: 1px solid #fff;
+                    }
                }
                
                #estates{
@@ -374,7 +379,6 @@
                               text-decoration: none;
                               color: #fff;
                               display: inline-block;
-                              margin-bottom: 10px;
                               transition: background-color ease-in-out 300ms;
                          }
                     }
