--- a/src/scss/components/sections/section-contact.scss
+++ b/src/scss/components/sections/section-contact.scss
@@ -25,7 +25,7 @@
       width: 10px;
       height: 10px;
       display: block;
-      margin-top: 50px;
+      margin: 50px auto;
     }
 
     h2 {
