--- a/src/scss/components/pages/a-propos.scss
+++ b/src/scss/components/pages/a-propos.scss
@@ -103,8 +103,12 @@
         padding: 22vh 10vw 10vh 15vw;
         background-color: #fff;
 
+        h2{
+          margin-bottom: 80px;
+        }
+
         p{
-          margin: 80px auto;
+          margin-bottom: 20px;
         }
       }
 
