--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -94,6 +94,7 @@ footer {
       color:$primary-color;
       font-size: .7rem;
       text-align: center;
+      line-height: 1.2rem;
     }
     a {
       color: $primary-color;
