--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -66,13 +66,13 @@
       display: flex;
       justify-content: flex-end;
       align-items: flex-start;
-      gap: 50px;
-      margin-top: 20px;
+      gap: 20px;
+      margin-top: 10px;
 
       li {
         text-transform: uppercase;
         letter-spacing: 3px;
-        font-size: 1rem;
+        font-size: .9rem;
         position: relative;
         margin-bottom:0;
 
