--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -1,4 +1,5 @@
-.page-template-listing-estates{
+.page-template-listing-estates,
+.page-template-reference{
      #listingEstates{
           .container{
                .whise-filter-container {
