--- a/src/scss/components/pages/contact.scss
+++ b/src/scss/components/pages/contact.scss
@@ -12,6 +12,8 @@
         line-height: 3.5rem;
         color: $primary-color;
         font-weight: 200;
+        font-family: "sofia-pro", sans-serif;
+
   
         strong {
           font-weight: 700;
