--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -16,6 +16,7 @@
                     font-size: 3rem;
                     width: 100%;
                     line-height: 3rem;
+                    font-family: "sofia-pro", sans-serif;
 
                     strong{
                          color: $light;
