--- a/src/scss/components/pages/actualites.scss
+++ b/src/scss/components/pages/actualites.scss
@@ -10,6 +10,7 @@
           font-size: 3.5rem;
           line-height: 4rem;
           font-weight: 300;
+          font-family: "sofia-pro", sans-serif;
 
           strong {
             font-weight: 700;
