--- a/src/scss/components/pages/documentation.scss
+++ b/src/scss/components/pages/documentation.scss
@@ -7,6 +7,7 @@
       position: relative;
       h1 {
         font-size: 3rem;
+        font-family: "sofia-pro", sans-serif;
         font-weight: 300;
         color: $secondary-color;
         line-height: 3.2rem;
