--- a/src/scss/components/pages/informations.scss
+++ b/src/scss/components/pages/informations.scss
@@ -21,6 +21,7 @@
         font-weight: 300;
         font-size: 3rem;
         line-height: 3.2rem;
+        font-family: "sofia-pro", sans-serif;
 
         strong {
           color: $secondary-color;
