--- a/src/scss/components/pages/single.scss
+++ b/src/scss/components/pages/single.scss
@@ -22,6 +22,7 @@
             color: $secondary-color;
             font-weight: 300;
             line-height: 3.5rem;
+            font-family: "sofia-pro", sans-serif;
           }
         }
 
