--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -19,6 +19,7 @@
             filter: brightness(60%);
             width: 100%;
             height: 100%;
+            object-fit: cover;
           }
 
           .content {
