--- a/src/scss/components/fonts.scss
+++ b/src/scss/components/fonts.scss
@@ -26,9 +26,19 @@ h5,
 h6,
 p,
 a,
-li {
+li,
+option {
   font-family: "sofia-pro", sans-serif;
   font-style: normal;
+  text-transform: capitalize;
+}
+
+.select-custom-container{
+  .title{
+    font-family: "sofia-pro", sans-serif;
+  font-style: normal;
+  text-transform: capitalize;
+  }
 }
 
 p,
