--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -413,6 +413,22 @@
            font-size: .8rem;
       }
     }
+
+    .item-estate{
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0px 5px 15px 0px rgba(0,0,0,.2);
+      transition: transform ease-in-out 200ms;
+
+      .available{
+         background: $primary-color;
+         color: #fff;
+         position: absolute;
+         left: 10px;
+         top: 10px;
+         padding: 5px 20px;
+      }
+    }
   }
 
   #mot_president {
