--- a/src/scss/components/sections/section-contact.scss
+++ b/src/scss/components/sections/section-contact.scss
@@ -51,6 +51,11 @@
       }
     }
 
+    .adresse{
+      width: 100%;
+      border-bottom: 1px solid $middle-gray;
+    }
+
     textarea{
       background:none;
       border-bottom: 1px solid $middle-gray;
