--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -3,6 +3,8 @@
   #title_listing {
     h1 {
       margin: 50px auto;
+      text-align: center;
+      font-family: "sofia-pro", sans-serif;
 
       strong {
         font-weight: 700;
