--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -2,9 +2,12 @@
 .page-template-reference {
   #title_listing {
     h1 {
-      margin: 50px auto;
-      text-align: center;
-      font-family: "sofia-pro", sans-serif;
+      margin: 80px auto;
+      font-size: 3rem;
+      font-family: "Sofia-pro", sans-serif;
+      color: $dark-gray;
+      font-weight: 300;
+      line-height: 3.5rem;
 
       strong {
         font-weight: 700;
