--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -8,6 +8,7 @@
       color: $dark-gray;
       font-weight: 300;
       line-height: 3.5rem;
+      text-align: center;
 
       strong {
         font-weight: 700;
