--- a/src/scss/components/sections/section-cta-contact.scss
+++ b/src/scss/components/sections/section-cta-contact.scss
@@ -5,6 +5,7 @@
   .container {
     display: flex;
     align-items: flex-start;
+    justify-content: center;
     padding: 50px;
     width: 60vw;
     margin: auto;
@@ -41,8 +42,8 @@
         font-weight: 300;
         line-height: 2.3rem;
 
-        strong{
-          color : $primary-color;
+        strong {
+          color: $primary-color;
         }
       }
 
