--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
 /*
-Theme Name: Afi-Esca    
+Theme Name: Stalport Immo	
 Theme URI:
 Author: Caractère
-Author URI: https://www.caractere-advertising.be/
-Description: Theme Afi-esca (2024)
+Author URI: https://www.noviad.be/
+Description: Stalport-immo (2024) 
 Version: 1.0.0
-Text Domain: Afi-esca
+Text Domain: Stalport Immo
 */
 
-     @font-face {
-          font-family: 'Autumn';
-          src: url(/assets/fonts/Autumn\ Chant.woff);
-     }
+@font-face {
+  font-family: "Autumn";
+  src: url(/assets/fonts/Autumn\ Chant.woff);
+}
 
-     @font-face {
-          font-family: 'Hasteristico';
-          src: url(/assets/fonts/Hasteristico.woff);
-     }
-
+@font-face {
+  font-family: "Hasteristico";
+  src: url(/assets/fonts/Hasteristico.woff);
+}
