--- a/src/scss/components/sections/section-suiveznous.scss
+++ b/src/scss/components/sections/section-suiveznous.scss
@@ -28,6 +28,10 @@
             left: 0;
             top: 0;
           }
+
+          &:hover {
+            background-color: $primary-color;
+          }
         }
       }
     }
