--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -555,7 +555,8 @@
 
   #confiance {
     @include liGray-to-white;
-    padding: 150px 0 250px 0;
+    padding: 100px 0 150px 0;
+    margin-top: 50px;
 
     .container {
       text-align: center;
